# BENG207_Multilayer

./: README.md  STUDENT_WORKFLOW.md  beng207_2026-application.c  beng207_2026-application.h  beng207_2026-window.c  beng207_2026-window.h  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  main.c  meson.build  org.gnome.Example.json  org.gnome.Example.json~
PLOT_CSV/: fig1_spectrum.csv  fig2a_sensitivity_eta.csv  fig2b_sensitivity_E.csv  fig3_phase_shift.csv  fig4_degradation.csv  fig5_attenuation.csv  fig6_broadband_sweep.csv  fig7_optimal_couplant.csv  fig9_design_optimization.csv
data/: org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml  org.gnome.Example.metainfo.xml.in  org.gnome.Example.service.in
po/: POTFILES.in  meson.build
src/: beng207_2026-window.ui  beng207_2026.gresource.xml  error1  main.c  meson.build
